--- a/Project11/index.html
+++ b/Project11/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="secImg">
         <img src="/images//tv.png" alt="" />
-        <video src="/Video/video1" autoplay loop muted></video>
+        <video src="/Video/video.mp4" autoplay loop muted></video>
       </div>
     </section>
     <div class="seperation"></div>
