--- a/Project11/index.html
+++ b/Project11/index.html
@@ -40,14 +40,14 @@
         >
       </div>
       <div class="secImg">
-        <img src="/images//tv.png" alt="" />
+        <img src="/images/tv.png" alt="" />
         <video src="/Video/video.mp4" autoplay loop muted></video>
       </div>
     </section>
     <div class="seperation"></div>
     <section class="first second">
       <div class="secImg">
-        <img src="/images//mobile.png" alt="" />
+        <img src="/images/mobile.png" alt="" />
       </div>
       <div>
         <span>Download your shows to watch offline</span> <br />
@@ -75,7 +75,7 @@
 
     <section class="first second">
       <div class="secImg">
-        <img src="/images//child.png" alt="" />
+        <img src="/images/child.png" alt="" />
       </div>
       <div>
         <span>Create Profile for kids</span> <br />
