--- a/Project11/index.html
+++ b/Project11/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="main">
       <nav>
-        <span><img src="/images/logo.svg" alt="" width="53" /></span>
+        <span><img src="/images/logo.svg" alt="not found" width="53" /></span>
         <div>
           <button class="btn">English</button>
           <button class="btn btn-red-sm">Sign In</button>
@@ -40,14 +40,14 @@
         >
       </div>
       <div class="secImg">
-        <img src="/images/tv.png" alt="" />
+        <img src="/images/tv.png" alt="not found" />
         <video src="/Video/video.mp4" autoplay loop muted></video>
       </div>
     </section>
     <div class="seperation"></div>
     <section class="first second">
       <div class="secImg">
-        <img src="/images/mobile.png" alt="" />
+        <img src="/images/mobile.png" alt="not found" />
       </div>
       <div>
         <span>Download your shows to watch offline</span> <br />
@@ -67,7 +67,7 @@
         >
       </div>
       <div class="secImg">
-        <img src="/images/tv.png" alt="" />
+        <img src="/images/tv.png" alt="not found" />
         <video src="/Video/video1.mp4" autoplay loop muted></video>
       </div>
     </section>
@@ -75,7 +75,7 @@
 
     <section class="first second">
       <div class="secImg">
-        <img src="/images/child.png" alt="" />
+        <img src="/images/child.png" alt="not found" />
       </div>
       <div>
         <span>Create Profile for kids</span> <br />
