--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             <td>Your GYM</td>
             <td><a href="Project12/index.html">Link</a></td>
           </tr>
+          <tr>
+            <td>13</td>
+            <td>Practice Project</td>
+            <td><a href="SmallProject/index.html">Link</a></td>
+          </tr>
       </tbody>
     </table>
   
