--- a/Project11/index.html
+++ b/Project11/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Netflix India watch Tv shows online, watch movies online</title>
-    <link rel="icon" href="/images/icon.png" type="image/png" />
+    <link rel="icon" href="Images/icon.png" type="image/png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="main">
       <nav>
-        <span><img src="/images/logo.svg" alt="not found" width="53" /></span>
+        <span><img src="Images/logo.svg" alt="not found" width="53" /></span>
         <div>
           <button class="btn">English</button>
           <button class="btn btn-red-sm">Sign In</button>
@@ -40,14 +40,14 @@
         >
       </div>
       <div class="secImg">
-        <img src="/images/tv.png" alt="not found" />
-        <video src="/Video/video.mp4" autoplay loop muted></video>
+        <img src="Images/tv.png" alt="not found" />
+        <video src="Video/video.mp4" autoplay loop muted></video>
       </div>
     </section>
     <div class="seperation"></div>
     <section class="first second">
       <div class="secImg">
-        <img src="/images/mobile.png" alt="not found" />
+        <img src="Images/mobile.png" alt="not found" />
       </div>
       <div>
         <span>Download your shows to watch offline</span> <br />
@@ -67,15 +67,15 @@
         >
       </div>
       <div class="secImg">
-        <img src="/images/tv.png" alt="not found" />
-        <video src="/Video/video1.mp4" autoplay loop muted></video>
+        <img src="Images/tv.png" alt="not found" />
+        <video src="Video/video1.mp4" autoplay loop muted></video>
       </div>
     </section>
     <div class="seperation"></div>
 
     <section class="first second">
       <div class="secImg">
-        <img src="/images/child.png" alt="not found" />
+        <img src="Images/child.png" alt="not found" />
       </div>
       <div>
         <span>Create Profile for kids</span> <br />
