--- a/Project12/index.html
+++ b/Project12/index.html
@@ -39,12 +39,12 @@
     </div>
     <div class="services-sec">
         <div class="card-container">
-            <img src="/images/about-fitness-edited.png" alt="">
+            <img src="Images/about-fitness-edited.png" alt="">
         </div>
         <div class="card-container">
             <div class="service-card">
                 <div class="card-title">
-                    <img src="/images/weightlifter-silhouette-100x100.png" alt="">
+                    <img src="Images/weightlifter-silhouette-100x100.png" alt="">
                     <h2>Weight Training</h2>
 
                 </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="service-card">
                 <div class="card-title">
-                    <img src="/images/exercise-100x100.png" alt="">
+                    <img src="Images/exercise-100x100.png" alt="">
                     <h2>General Fitness</h2>
 
                 </div>
@@ -74,7 +74,7 @@
             </div>
             <div class="service-card">
                 <div class="card-title">
-                    <img src="/images/weightlifting-100x100.png" alt="">
+                    <img src="Images/weightlifting-100x100.png" alt="">
                     <h2>Functional Training</h2>
 
                 </div>
@@ -139,13 +139,13 @@
         <h1 class="section-title">Media Gallery</h1>
         <div class="gallery-row">
             <div class="gallery-card">
-                <img src="/images/blog1.png" alt="">
+                <img src="Images/blog1.png" alt="">
             </div>
             <div class="gallery-card">
-                <img src="/images/istockphoto-1089939832-612x612.jpg" alt="">
+                <img src="Images/istockphoto-1089939832-612x612.jpg" alt="">
             </div>
             <div class="gallery-card">
-                <img src="/images/bodybuilder-performing-back-exercising-with-barbell-gym_600776-39427.webp" alt="">
+                <img src="Images/bodybuilder-performing-back-exercising-with-barbell-gym_600776-39427.webp" alt="">
             </div>
         </div>
     </div>
@@ -156,7 +156,7 @@
       <a href="#">Read More</a>
         </div>
         <div class="about-card">
-            <img src="/images/team1.png" alt="">
+            <img src="Images/team1.png" alt="">
         </div>
     </div>
     <footer>
