--- a/Project12/index.html
+++ b/Project12/index.html
@@ -39,7 +39,8 @@
     </div>
     <div class="services-sec">
         <div class="card-container">
-            <img src="Images/about-fitness-edited.png" alt="">
+            <div class="cell">
+            <img src="Images/about-fitness-edited.png" alt=""></div>
         </div>
         <div class="card-container">
             <div class="service-card">
